plugins {
    id 'application'
    id 'java'
}
repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}
dependencies {
    implementation 'com.github.zhkl0228:unidbg-android:0.9.9'
    implementation 'org.slf4j:slf4j-simple:1.7.36'
}
java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}
application {
    mainClass = 'lab.boss.YzwgRunner'
    applicationDefaultJvmArgs = [
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
        '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
    ]
}
run {
    standardInput = System.in
    systemProperty 'vmverbose', System.getProperty('vmverbose', '')
    systemProperty 'op', System.getProperty('op', '')
    systemProperty 'inHex', System.getProperty('inHex', '')
    systemProperty 'key', System.getProperty('key', '')
}
